<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stStruct" Id="{e5c2c343-043b-4379-b03d-06ffac832d94}">
    <Declaration><![CDATA[TYPE stStruct :
STRUCT
	bFirst : BOOL;
	iSecond : INT;
	rThird : REAL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>