<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Globals" Id="{1f9bb3f1-bbc7-4e7f-9953-11c512179d55}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bBool1 : BOOL := FALSE;
	bBool2 : BOOL := TRUE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>